--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,11 @@ script:
 after_script:
   - MIX_ENV=docs mix deps.get --only docs
   - MIX_ENV=docs mix inch.report
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/2aca35faec936cb8dd6e
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
+
